--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 						<p>TERPERCAYA &nbsp;&bull;&nbsp; AMAN &nbsp;&bull;&nbsp; DAPAT DIANDALKAN</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="www.twitter.com" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="www.facebook.com" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://rimurukingone.github.io/RA1" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://otakudesu.vip/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://t.me/+GfN9lB7Htj8zZjY1" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
