--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						<p>TERPERCAYA &nbsp;&bull;&nbsp; AMAN &nbsp;&bull;&nbsp; DAPAT DIANDALKAN</p>
 						<nav>
 							<ul>
-								<li><a href="www.twitter.com" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="www.facebook.com" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://mobile.twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://m.facebook.com/?rtime=1638633076&subno_key=AaHYrIzJzBLgX4ZLMbCwraIzKIQRTgxmGtv4M8EEKatxtGU0gSc0-DyMlSNKT1bDxWlLQ1BTybKrKlVe-KHeRihJudf_4zTODYO7JIxPC5oRdPp_31RenoaoC5K3m4yNTef6GN5CbopuEfgSlOhbSQBK1WS9sNLHqoHTLSRuPWS6AJtxV7EQe8fKLMYBdKpOscoWn3jrO2mLio7JOCGwNAGQHVJYb8IMl8jh6U4UjDQiYOhCaKsvcHvZEg4qaP23ZULGx6vQNUsVf5sEx4FtKDkRaG4AVCT68BB7NHNJ97zLgA&hrc=1&refsrc=deprecated&_rdr" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://rimurukingone.github.io/RA1" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="https://otakudesu.vip/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://t.me/+GfN9lB7Htj8zZjY1" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
